src/test/deca/syntax/invalid/renduInter01/03missing_parent_if.deca
// Description:
//      Programme lexicalement incorrect
//      => une instruction conditionnelle if...else doit posséder une condition de départ entre parenthèses "if (condition) { ... } else { ... }"
//
// Resultats:
//      Erreur syntaxique
//      Ligne 11 : token 'x' inattendu => token '(' attendu

{
    int x = 4;
    if x == 4
    {
        println("hello if", x);
    }
    else {
        println("hello else", x);
        }

}
